# autoanki

./: .codetogether.ignore  .gitignore  AutoAnki.db  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  ROADMAP.md  Test.db  amount.txt  book_to_database.py  book_to_word_list.py  card_generator.py  check_char_count.py  code_outline.md  code_outline.txt  databases.sql  flask_server.py  frequency.txt  full_book.txt  full_book_with_pinyin.txt  full_book_with_pinyin_word_list.txt  full_book_with_pinyin_word_list_pinyin.txt  general_functions.py  main.py  maze_runner_definitions.txt  maze_runner_pinyin_word_list.txt  maze_runner_pinyin_word_list_freq_pinyin.txt  maze_runner_pinyin_word_list_freq_pinyin_pinyinNum.txt  one.db  output.apkg  pyproject.toml  requirements.txt  setup.cfg  test.txt  tox.ini  web_assests.py  web_assets.py
.github/workflows/: python-package.yml
AutoAnki/: AutoAnki.py  __init__.py  cli.py  general_functions.py  terminal.py
AutoAnki/BookCleaner/: BookCleaner.py  __init__.py
AutoAnki/DatabaseManager/: DatabaseManager.py  LibraryManager.py  __init__.py  book_table.sql
AutoAnki/DeckManager/: __init__.py
AutoAnki/Dictionary/: CC-CEDictionary.py  Dictionary.py  YellowBridgeDictionary.py
AutoAnki/Scripts/: activate  activate.bat  pinyin-script.py  pystache-script.py  pystache-test-script.py
DatabaseBuilder/: DatabaseBuilder.py  dictionary_maintainer.py
DatabaseManager/: BookCleaner.py  DatabaseManager.py  databases.sql
DeckMaker/: DeckMaker.py  DeckManager.py
DeckManager/: DeckManager.py
PageScraper/: PageScraper.py  csw_page_scraper.py  xyyuedu_page_scraper.py
backupTranslatedFiles/: Chapters1-10.txt  first.txt  frequency.txt  last.txt  mid.txt
backupTranslatedFiles/noPinyin/: Chapters1-10.txt  first.txt  last.txt  mid.txt
books/: maze_runner.txt
chinese_stats/: README  char_freq.json  heisig_decomp.json  heisig_target.json  hsk14_word_target.json  hsk16_word_target.json  loach_order.json  loach_word_order.json  outlier_decomp.json  outlier_target.json  yan_4000_order.json
examples/: cli.py  create_deck.py  output.apkg
legacyFiles/: book_to_word_list.py  first.txt  full_book.txt  justInCase
legacyFiles/backup/: maze_runner_definition1.txt  maze_runner_pinyin_word_list_freq_pinyin_cut.txt
legacyFiles/noPinyin/: last.txt
media/: chinese.txt  hello.txt  output.apkg  pinyinForAudioDownloader.txt
media/chinese/: chinese.txt
media/databases/: AutoAnki.db  AutoAnki1.db  auto-anki.db
media/hello/cleaned_files/: hello.txt
media/sample_text/: sample_text.txt
media/test_files/: short-story.txt  short-story_cleaned.txt  test1.txt  test1_cleaned.txt  test2.txt
media/test_files/chinese/: chinese2.txt
media/tt/: tt.txt
media/tt/cleaned_files/: tt.txt
pages/99csw/test_tkamb/: test-tkamb-ch1.txt  test-tkamb-ch2.txt  test-tkamb-ch3.txt  test-tkamb-ch4.txt
pages/xyyuedu/移动迷宫1·找出真相/: 第一章 林间空地.txt  第七章 第一号准则.txt  第三十一章 监禁结束.txt  第三十七章 有价值的信息.txt  第三十三章 启动终结程序.txt  第三十九章 消失在迷宫里.txt  第三十二章 探入黑暗之中.txt  第三十五章 迷宫是一个代码.txt  第三十八章 菜鸟超人.txt  第三十六章 被抹去的记忆.txt  第三十四章 飞入灰色深渊.txt  第三十章 牢房一日游.txt  第三章 神秘木屋.txt  第九章 奇特的关联.txt  (+27 more)
src/: auto-anki.py
src/DatabaseManager/: BookCleaner.py  DatabaseManager.py  databases.sql
src/DeckManager/: DeckManager.py
src/PageScraper/: xyyuedu_page_scraper.py
src/autoanki/: AutoAnki.py  __init__.py
src/autoanki.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/databases/: one.db
stanford-segmenter-2020-11-17/: SegDemo.java
tests/: perf_tests.py  test_AutoAnki.py  test_DeckManager.py
tests/files/: chinese_lyrics_1.txt  chinese_novel_2.txt  chinese_pleco_1.txt  chinese_puncuation_1.txt  chinese_sentance_1.txt
(+47 files in other folders)
