[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoanki"
dynamic = ["version"]
description = "Automatically make Anki Decks for Chinese text"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jarvis Coghlin", email = "jarviscoghlin@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
	"beautifulsoup4==4.13.4",
	"chinese_converter==1.1.1",
	"EbookLib==0.18",
	"genanki==0.13.1",
	"jieba==0.42.1",
	"pandas==2.3.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/jarviscog/autoanki/issues"
Homepage = "https://github.com/jarviscog/autoanki"

[tool.hatch.version]
path = "src/autoanki/__init__.py"

[tool.hatch.metadata]
include = ["src/autoanki/**"]
sources = { autoanki = "src/autoanki" }

[tool.hatch.envs.default]
paths = ["src", "src/autoanki"]

[tool.hatch.build.targets.wheel]
packages = ["src/autoanki",]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

