[metadata]
name = autoanki
version = 1.1.91
author = Jarvis Coghlin
author_email = jarviscoghlin@gmail.com
description = Automatically make Anki Decks for Chinese text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmy6figures/autoanki
project_urls =
    Bug Tracker = https://github.com/timmy6figures/autoanki/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe=False
package_dir =
    = src
packages = find:
python_requires = >=3.10
[options.packages.find]
where = src
