[metadata]
name = autoanki
version = 1.2.0
author = Jarvis Coghlin
author_email = jarviscoghlin@gmail.com
description = Automatically make Anki Decks for Chinese text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmy6figures/autoanki
project_urls =
    Bug Tracker = https://github.com/timmy6figures/autoanki/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe=False
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    chinese-converter>=1.1.1
    beautifulsoup4~=4.12.2
    genanki~=0.13.0
    jieba~=0.42.1
    pinyin~=0.4.0
    requests~=2.31.0
    wordfreq



[options.packages.find]
where = src
